--- a/GES_DISC_Cloud_Notebooks/Bite-Sized_Notebooks/2_Storing_Earthdata_Login.ipynb
+++ b/GES_DISC_Cloud_Notebooks/Bite-Sized_Notebooks/2_Storing_Earthdata_Login.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "durable-disaster",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "rotary-twelve",
    "metadata": {},
    "outputs": [],
@@ -90,10 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a38f117a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 84\n",
+      "drwxr-xr-x 14 jovyan jovyan 6144 Apr  1 20:15 .\n",
+      "drwxr-xr-x  1 root   root     20 Oct  4 16:21 ..\n",
+      "-rw-------  1 jovyan jovyan 5733 Mar 30 01:34 .bash_history\n",
+      "drwxr-xr-x  5 jovyan jovyan 6144 Mar 25 19:31 .cache\n",
+      "drwxrwsr-x  2 jovyan jovyan 6144 Mar 25 18:03 .conda\n",
+      "drwxr-xr-x  5 jovyan jovyan 6144 Mar 18 20:13 .config\n",
+      "-rw-r--r--  1 jovyan jovyan  230 Apr  1 18:10 .dodsrc\n",
+      "-rw-r--r--  1 jovyan jovyan   68 Mar 18 19:10 .gitconfig\n",
+      "drwxr-xr-x  2 jovyan jovyan 6144 Mar 18 19:37 .ipynb_checkpoints\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Mar 18 18:38 .ipython\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Mar 24 19:28 .jupyter\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Mar 18 17:52 .local\n",
+      "-rw-------  1 jovyan jovyan   72 Apr  1 20:15 .netrc\n",
+      "drwx------  2 jovyan jovyan 6144 Mar 18 20:08 .ssh\n",
+      "-rw-r--r--  1 jovyan jovyan    0 Apr  1 18:05 .urs_cookies\n",
+      "drwxr-xr-x  4 jovyan jovyan 6144 Mar 24 19:33 ArabianSea\n",
+      "drwxr-xr-x  5 jovyan jovyan 6144 Apr  1 17:58 gesdisc-cloud-tutorials\n",
+      "-rw-r--r--  1 jovyan jovyan 5368 Mar 25 17:59 install-from-source.sh\n",
+      "drwxr-xr-x  3 jovyan jovyan 6144 Mar 30 00:26 nasa-proposal-2022\n",
+      "drwxr-xr-x 20 jovyan jovyan 6144 Apr  1 18:28 shared\n"
+     ]
+    }
+   ],
    "source": [
     "! ls -al ~/"
    ]
@@ -110,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "05c9880a",
    "metadata": {},
    "outputs": [],
@@ -120,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "09e83a8c",
    "metadata": {},
    "outputs": [],
@@ -143,23 +171,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! echo \"HTTP.NETRC=<YourHomeDirectory>/.netrc\" >> ~/.dodsrc"
+    "! echo \"HTTP.NETRC=/home/jovyan/.netrc\" >> ~/.dodsrc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0040e462",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! echo \"HTTP.COOKIEJAR=/home/jovyan/.urs_cookies\" >> ~/.dodsrc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "231ca1eb-8ac1-4a69-a9af-ec0900fa42aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ArabianSea\t\t install-from-source.sh  shared\n",
+      "gesdisc-cloud-tutorials  nasa-proposal-2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "! ls ~"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0040e462",
+   "id": "05452a4e-b78b-4b0b-9ac5-5336d3708a35",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "! echo \"HTTP.COOKIEJAR=<YourHomeDirectory>/.urs_cookies\" >> ~/.dodsrc"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -173,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
