--- a/GES_DISC_Cloud_Notebooks/Bite-Sized_Notebooks/3_Retrieve_Temp_S3_Credentials.ipynb
+++ b/GES_DISC_Cloud_Notebooks/Bite-Sized_Notebooks/3_Retrieve_Temp_S3_Credentials.ipynb
@@ -94,8 +94,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1092fa61",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'statusCode': 500, 'error': 'Internal Server Error', 'message': 'An internal server error occurred'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e3c90ed-265a-4445-91fe-2fcbf8c6bccc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -107,7 +125,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -121,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
